# OC_P6

./: .dockerignore  .gitignore  .hfignore  Dockerfile  RAPPORT_VERIFICATION_NOTEBOOK.md  README.md  api_input_example.txt  app.py  main.py  mlflow.db  pyproject.toml  requirements-inference.txt  requirements.txt
.github/workflows/: ci-cd.yml  sync-hf-spaces.yml
docs/: monitoring_plan.md
models/: export_model.py  export_preprocessor.py  lightgbm.txt
notebooks/: 01_exploration.ipynb  02_preparation_features.ipynb  03_LGBM.ipynb  03_modeling_mlflow.ipynb  04_regression.ipynb  05_model_interpretation.ipynb  06_analyse_logs.ipynb  07_detect_data_drift.ipynb  08_analyze_logs_2.ipynb  09_profiling.ipynb  10_optimisation.ipynb  mlflow.db
projet/: etapes.txt  mission.txt
reference/: simulate_production_calls.py
reports/: generate_plots.py  generate_plots_png.py  monitoring_study.md  presentation_summary.py  rapport_optimisation.md
src/: __init__.py  config.py  load_data.py  mlflow_config.py  preprocessing.py
src/data/: load_data.py
tests/: conftest.py  test_predict.py  test_preprocessing.py
train/: train.ipynb
